# C-Programming

lab10/: makefile
lab12/task0/: Makefile
lab12/task1/: CMakeLists.txt
lab12/task1/background/: CMakeLists.txt
lab12/task1/pipes/: CMakeLists.txt
lab2/: l1.c  l2.c  l33.c
lab3/: task1  task1.c  task2  task2.c  task3  task3.c  task4  task4.c  task5  task5.c
lab4/: task1  task1.c
lab5/: task1  task1.c  task18  task18.c
lab6/: task1.c  task2.c
lab7/: task.c
lab7/lab10/: Makefile  task1.c  task1.h  task1_1.c
lab8/: snail.c  task1.c
lab9/: task18.c
